# crypto-accounts

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  go.mod
.claude/skills/commit-clean/: SKILL.md
cmd/address/: main.go
cmd/bip32/: main.go
cmd/bip39/: main.go
cmd/bip44/: main.go
crypto-lib/: Cargo.toml
crypto-lib/src/: bip32.rs  bip39.rs  lib.rs
crypto-lib/src/bitcoin/: mod.rs
crypto-lib/src/cosmos/: mod.rs
crypto-lib/src/evm/: mod.rs
crypto-lib/src/solana/: mod.rs
crypto-lib/src/sui/: mod.rs
crypto-lib/src/utils/: bech32.rs  mod.rs  slip10.rs
docs/: bip-0032.md  bip-0044.md  chain-specific-addresses.md  cli-bip32.md
docs/spec/: bip-0039.md  bip-0043.md
examples/: bip32_example.go
notes/: bip-39_learn.md  evm.md
pkgs/address/: address.go  address_test.go  algorand.go  aptos.go  arweave.go  avalanche.go  base58.go  bech32.go  bitcoin.go  bitcoincash.go  cardano.go  cosmos.go  dogecoin.go  eos.go  ethereum.go  factory.go  filecoin.go  flow.go  hash.go  hedera.go  icp.go  kaspa.go  litecoin.go  monero.go  near.go  new_chains_test.go  polkadot.go  ripple.go  solana.go  stacks.go  stellar.go  sui.go  tezos.go  tron.go  zcash.go
pkgs/bip32/: bip32_test.go  derivation.go  errors.go  key.go  network.go  network_test.go  path.go  serializer.go
pkgs/bip39/: errors.go  mnemonic.go  mnemonic_test.go  seed.go  seed_test.go  wordlist.go  wordlist_english.go
pkgs/bip44/: account.go  coin.go  path.go  path_test.go  wallet.go  wallet_test.go
pkgs/crypto/ed25519/: ed25519.go  ed25519_test.go
pkgs/crypto/encoding/: base58.go  base58_test.go
(+12 files in other folders)
